feat: update mentor UI and progress tracking functionalities